--- a/Fake-Diplomat-Exposed!.html
+++ b/Fake-Diplomat-Exposed!.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Tnews - News & Magazine HTML Template - Blog Details</title>
+    <title>Fake Diplomat Exposed! Imposter Scammer Poses as Undersecretary of Political Affairs</title>
     <meta name="author" content="Tnews">
     <meta name="description" content="Tnews - News & Magazine HTML Template">
     <meta name="keywords" content="Tnews - News & Magazine HTML Template">
@@ -331,16 +331,16 @@
             <div class="row">
                 <div class="col-xxl-9 col-lg-8">
                     <div class="th-blog blog-single">
-                        <a data-theme-color="#4E4BD0" href="blog1.html" class="category">Investment</a>
-                        <h2 class="blog-title"><strong>CJ Costales</strong>, Scheme Mastermind Swindles Millions through Fake Political Influence</h2>
+                        <a data-theme-color="#4E4BD0" href="Fake-Diplomat-Exposed!.html" class="category">Politics</a>
+                        <h2 class="blog-title">Fake Diplomat Exposed: Imposter Scammer Poses as Undersecretary of Political Affairs</h2>
                         <div class="blog-meta">
-                            <a class="author" href="#"><i class="far fa-user"></i>By - Jhon Reyes</a>
+                            <a class="author" href="#"><i class="far fa-user"></i>By - Jose Garcia</a>
                             <a href="#"><i class="fal fa-calendar-days"></i>Jan, 2024</a>
                             <a href="#"><i class="far fa-comments"></i>Comments (3)</a>
                             <span><i class="far fa-book-open"></i>5 Mins Read</span>
                         </div>
                         <div class="blog-img">
-                            <img src="assets/img/blog/blog-s-1-52.jpg" alt="Blog Image">
+                            <img src="assets/img/blog/blog-s-1-5.jpg" alt="Blog Image">
                         </div>
                         <div class="blog-content-wrap">
                             <div class="share-links-wrap">
@@ -370,28 +370,26 @@
                                     <span class="blog-info">12k <i class="fas fa-share-nodes"></i></span>
                                 </div>
                                 <div class="content">
-                                    <p>Authorities have discovered a sophisticated scheme orchestrated by an individual named Johnson Costales, also known as <strong>CJ Costales</strong>, who cleverly carried out his actions through his fake connections to political elites, including high-ranking officials in the President's Office by disguising himself as an Undersecretary for Political Affairs. </p>
-                                    <p>The mastermind duped unsuspecting victims into investing large sums of money, expensive cars, jewelry, and other valuables worth millions with promises of gaining influential positions through his alleged political affiliations.  </p>
-                                    
+                                    <p>In a shocking revelation, authorities have uncovered a deceitful individual by the name of <strong>Johndel Costales</strong> alias <strong>CJ Costales</strong> masquerading as a ,<strong>high-ranking government official</strong> particulary an <strong>Undersecretary (USec)</strong> of the Office of the Political Affairs. <strong>Costales</strong> is said to have complete with VIP security privileges from four police members in service who is likewise asserting ties to the esteemed <strong>First Lady.</strong> </p>
+                                    <p>This charlatan had cunningly deceived unsuspecting citizens and officials alike, portraying himself as an influential figure within the corridors of power. With a meticulously crafted facade of authority and the added allure of purported connections to the First Lady, <strong>Costales</strong> managed to manipulate situations to his advantage, exploiting trust and credibility to solicit funds for purposes left unidentified.  </p>
+                                    <p>However, his pretensions were shattered when vigilant citizens alerted the authorities with regard to the suspicious inconsistencies in <strong>Costales</strong>' claims, and a closer scrutiny revealed that this individual's purported affiliations were nothing more than fabrications striking at the heart of public trust and governmental integrity.</p>
                                     <div class="my-4 py-lg-2">
                                         <a href="https://themeforest.net/user/themeholy/portfolio">
-                                            <img class="light-img w-100" src="assets/img/ads/ads_blog_11.jpg" alt="Ads">
-                                            <img class="dark-img w-100" src="assets/img/ads/ads_blog_11_dark.jpg" alt="Ads">
+                                            <img class="light-img w-100" src="assets/img/ads/ads_blog_1.jpg" alt="Ads">
+                                            <img class="dark-img w-100" src="assets/img/ads/ads_blog_1_dark.jpg" alt="Ads">
                                         </a>
                                     </div>
-                                    <p>Victims from various backgrounds have come forward, sharing stories of financial ruin and dashed hopes after discovering they had fallen victim to a complex deception. The scheme, which was meticulously designed to capitalize on ambition and desperation, promised access to powerful circles within the government hierarchy in exchange for large investments.</p>
-                                    <p>One victim, who preferred to remain anonymous, described being enticed by the allure of political connections and the prospect of advancement. "I was convinced that my investment would pave the way for career opportunities and social status," the victim said, only to discover that it was all a sham.</p>
+                                    <p>With this, the public is urged to remain vigilant and report any suspicious activity, ensuring that fraud be quickly identified and be held accountable for their fraudulent actions and to likewise safeguard the sanctity of public office and upholding the trust bestowed upon those who serve the nation.</p>
                                     <div class="my-4 py-lg-2">
-                                        <img class="w-100" src="assets/img/blog/blog_inner_11.jpg" alt="Blog Image">
+                                        <img class="w-100" src="assets/img/blog/blog_inner_1.jpg" alt="Blog Image">
                                     </div>
-                                    <h3 class="h4"><strong>CJ Costales</strong>, Scheme Mastermind </h3>
-                                    <p>So, this case serves as a reminder of the dangers posed by individuals who use political influence for personal gain, urging the public to exercise caution and vigilance to avoid further victimization.</p>
+                                    <h3 class="h4">Exposed! Imposter Scammer! </h3>
+                                    <p>This event underscores the significance of due diligence in verifying claims of and reinforcing the need for transparency and accountability in all aspects of governance to avert intentions like <strong>Costales</strong>', in pursuit to juice off the unaware with his pretensions.</p>
                                    
 
                                     <blockquote>
-                                        <p>Lying, stealing, and cheating are commonplace.
-                                          </p>
-                                        <cite>Joseph Wirthlin</cite>
+                                        <p>The only thing worse than a liar is a liar that's also a hypocrite!</p>
+                                        <cite>Robert Milton</cite>
                                     </blockquote>
                                     <div class="row mb-4 pb-lg-2 pt-xl-2 gy-4">
                                         <div class="col-md-auto">
@@ -438,9 +436,9 @@
                                         <img src="assets/img/blog/comment-author-1.jpg" alt="Comment Author">
                                     </div>
                                     <div class="comment-content">
-                                        <span class="commented-on"><i class="fas fa-calendar-alt"></i>December, 2023</span>
-                                        <h3 class="name">Pangalan</h3>
-                                        <p class="text">What a shame! Dapat dito mahuli. Can't imagine the futher potential harm it may cause the public. Sana iprioritize ito. </p>
+                                        <span class="commented-on"><i class="fas fa-calendar-alt"></i>January, 2024</span>
+                                        <h3 class="name">Juliana Morillio</h3>
+                                        <p class="text">Sa mga authorities, hindi dapat ito ipagwalang bahala. You should do something. Di lang credibility niyo ang at risk dito pati ang security at safety ng mga tao.</p>
                                         <div class="reply_and_edit">
                                             <a href="#" class="reply-btn"><i class="fas fa-reply"></i>Reply</a>
                                         </div>
@@ -453,9 +451,9 @@
                                                 <img src="assets/img/blog/comment-author-2.jpg" alt="Comment Author">
                                             </div>
                                             <div class="comment-content">
-                                                <span class="commented-on"><i class="fas fa-calendar-alt"></i>January, 2024</span>
-                                                <h3 class="name">Pangalan</h3>
-                                                <p class="text">Definitely something na hindi ikaka-proud bilang isang Pilipino. Juicing off their kapwa Filipinos. Kaya walang pag-unlad ang Pinas dahil sa mga katulad na tao neto. Sana ma-address agad yan.</p>
+                                                <span class="commented-on"><i class="fas fa-calendar-alt"></i>February, 2024</span>
+                                                <h3 class="name">Marvin Rodriguez</h3>
+                                                <p class="text">This must not be taken lightly, kelangan managot ang dapat managot. Dapat kumilos ang authories concerned bago pa makapangbiktima ng mas madami yan.</p>
                                                 <div class="reply_and_edit">
                                                     <a href="#" class="reply-btn"><i class="fas fa-reply"></i>Reply</a>
                                                 </div>
@@ -470,9 +468,9 @@
                                         <img src="assets/img/blog/comment-author-3.jpg" alt="Comment Author">
                                     </div>
                                     <div class="comment-content">
-                                        <span class="commented-on"><i class="fas fa-calendar-alt"></i>February, 2024</span>
-                                        <h3 class="name">Pangalan</h3>
-                                        <p class="text">Though nakakainis talaga na may mga ganitong klaseng tao, we also should do our part as citizens, counter check lagi para di tayo maloko lalo kung large sum of money yung involved. Dami na talaga con artist ngayon. Wag gumagat it it's too good to be true kaso di mo masisi kasi others want to have a good fortune, secure a position in the government kasi stable kaya lang part na talaga ng employment system ang padrino, no matter how good and qualified you are pag wala kang backer, ligwak ka! Kaya maraming Pilipino ang magpapaalipin sa ibang tao kaya nito para lang maging okay ang buhay kaso they ended up being tricked.</p>
+                                        <span class="commented-on"><i class="fas fa-calendar-alt"></i>March, 2024</span>
+                                        <h3 class="name">Jayson Tamayo</h3>
+                                        <p class="text">Tindi naman nyang individual na yan. Dapat masawata yan. Challenging all the authority para maput to an end ang ginagawa nyan!</p>
                                         <div class="reply_and_edit">
                                             <a href="#" class="reply-btn"><i class="fas fa-reply"></i>Reply</a>
                                         </div>
