--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Tnews - News & Magazine HTML Template - Contact Us</title>
+    <title>Contact Us</title>
     <meta name="author" content="Tnews">
     <meta name="description" content="Tnews - News & Magazine HTML Template">
     <meta name="keywords" content="Tnews - News & Magazine HTML Template">
@@ -333,7 +333,7 @@ Contact Info Area
                     <div class="pe-xxl-4 me-xl-3 text-center text-xl-start mb-40 mb-lg-0">
                         <div class="title-area mb-32">
                             <h2 class="sec-title2">Get in Touch</h2>
-                            <p class="sec-text">Aliquam erat volutpat. Morbi sed lectus volutpat nulla laoreet maximus vel ac nulla. Maecenas ullamcorper felis</p>
+                            <p class="sec-text">Be aware, be one of us.</p>
                         </div>
                         <div class="contact-feature-wrap">
                             <div class="contact-feature">
