--- a/CJ-Costales-Swindler.html
+++ b/CJ-Costales-Swindler.html
@@ -6,8 +6,9 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>CJ Costales, Scheme Mastermind Swindles Millions through Fake Political Influence</title>
     <meta name="author" content="Tnews">
-    <meta name="description" content="Tnews - News & Magazine HTML Template">
-    <meta name="keywords" content="Tnews - News & Magazine HTML Template">
+    <meta name="description" content="CJ Costales, Scheme Mastermind Swindles Millions through Fake Political Influence">
+    <meta name="keywords" content="CJ Costales, Scheme Mastermind Swindles Millions through Fake Political Influence">
+    <meta property="og:image" content="assets/img/blog/thumbnail3.jpg">
     <meta name="robots" content="INDEX,FOLLOW">
 
     <!-- Mobile Specific Metas -->
