--- a/Fake-Diplomat-Exposed!.html
+++ b/Fake-Diplomat-Exposed!.html
@@ -6,8 +6,9 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>Fake Diplomat Exposed! Imposter Scammer Poses as Undersecretary of Political Affairs</title>
     <meta name="author" content="Tnews">
-    <meta name="description" content="Tnews - News & Magazine HTML Template">
-    <meta name="keywords" content="Tnews - News & Magazine HTML Template">
+    <meta name="description" content="Fake Diplomat Exposed! Imposter Scammer Poses as Undersecretary of Political Affairs">
+    <meta name="keywords" content="Fake Diplomat Exposed! Imposter Scammer Poses as Undersecretary of Political Affairs">
+    <meta property="og:image" content="assets/img/blog/thumbnail.jpg">
     <meta name="robots" content="INDEX,FOLLOW">
 
     <!-- Mobile Specific Metas -->
