--- a/Undersecretary-Impersonator.html
+++ b/Undersecretary-Impersonator.html
@@ -6,8 +6,9 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>Undersecretary Impersonator Exploits Trust for Illicit Gain in Chinese Business Community</title>
     <meta name="author" content="Tnews">
-    <meta name="description" content="Tnews - News & Magazine HTML Template">
-    <meta name="keywords" content="Tnews - News & Magazine HTML Template">
+    <meta name="description" content="Undersecretary Impersonator Exploits Trust for Illicit Gain in Chinese Business Community">
+    <meta name="keywords" content="Undersecretary Impersonator Exploits Trust for Illicit Gain in Chinese Business Community">
+    <meta property="og:image" content="assets/img/blog/thumbnail2.jpg">
     <meta name="robots" content="INDEX,FOLLOW">
 
     <!-- Mobile Specific Metas -->
