--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>Public Awareness! Beware: Johndel "CJ" Costales | Scammer | Swindler.</title>
     <meta name="author" content="Tnews">
-    <meta name="description" content="Tnews - News & Magazine HTML Template">
-    <meta name="keywords" content="Tnews - News & Magazine HTML Template">
+    <meta name="description" content="Public Awareness! Beware: Johndel CJ Costales | Scammer | Swindler.">
+    <meta name="keywords" content="Public Awareness! Beware: Johndel CJ Costales | Scammer | Swindler.">
+    <meta property="og:image" content="assets/img/blog/thumbnail.jpg">
     <meta name="robots" content="INDEX,FOLLOW">
+
 
     <!-- Mobile Specific Metas -->
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -325,16 +327,16 @@ News Area
                 <div class="news-wrap">
                     <div class="row slick-marquee">
                         <div class="col-auto">
-                            <a href="blog-details.html" class="breaking-news">World Report 2024: Philippines.</a>
+                            <a href="#" class="breaking-news">World Report 2024: Philippines.</a>
                         </div>
                         <div class="col-auto">
-                            <a href="blog-details.html" class="breaking-news">Trending Ngayon: Miss Philippines Earth winner, Mother's Day, and Eurovision's grand winner.</a>
+                            <a href="#" class="breaking-news">Trending Ngayon: Miss Philippines Earth winner, Mother's Day, and Eurovision's grand winner.</a>
                         </div>
                         <div class="col-auto">
-                            <a href="blog-details.html" class="breaking-news">PH seen to 'fully recover' pre-pandemic tourist arrivals in 2024.</a>
+                            <a href="#" class="breaking-news">PH seen to 'fully recover' pre-pandemic tourist arrivals in 2024.</a>
                         </div>
                         <div class="col-auto">
-                            <a href="blog-details.html" class="breaking-news">Marcos urged to address ‘alarming’ resignation trend in PH.</a>
+                            <a href="#" class="breaking-news">Marcos urged to address ‘alarming’ resignation trend in PH.</a>
                         </div>
                     </div>
                 </div>
