--- a/Undersecretary-Impersonator.html
+++ b/Undersecretary-Impersonator.html
@@ -54,6 +54,22 @@
     <!-- Theme Custom CSS -->
     <link rel="stylesheet" href="assets/css/style.css">
 
+    <style>
+        /* Style the container button */
+        button.popupClose {
+            padding: 5px 10px; /* Add padding around the icon */
+            border: 1px solid black; /* Add a border around the button */
+            background-color: #fb0101; /* Set a background color for the button */
+            border-radius: 5px; /* Optional: Add rounded corners */
+        }
+
+        /* Style the icon inside the button */
+        button.popupClose i {
+            color: rgb(255, 255, 255);
+            font-weight: bold;
+        }
+    </style>
+
 </head>
 
 <body>
